--- a/Bootstrap/12-Projects/styles.css
+++ b/Bootstrap/12-Projects/styles.css
@@ -6,18 +6,60 @@
     background-color: #f5f6f7;
 
 }
+/*estilos generales*/
 
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero{
+    background-color: #f5f6f7;
+    min-height: 450px;
+    text-align: center;
+
+}
 .navbar-collapse{
     align-items: center;
     justify-content: space-between;
 }
 
+h1{
+    font-size: 2.5rem;
+    font-family: "Rubik Dirt", system-ui;
+}
 
 /*Adaptable responsivo*/
-/*Continuar Seccion Hero*/
+
+.hero-principal{
+    padding: 3rem;
+
+}
+
+.hero-principal h2{
+    font-size: 1.5rem;
+    color: #615151;
+}
+.hero-imagen-desarrollador{
+    width: 200px;
+    height: 200px;
+    margin: 20px;
+}
+
+
+
 
 @media screen and (max-width: 767px){
     .navbar-brand{
         display: none;
+    }
+}
+
+
+@media screen and (min-width: 700px){
+    .hero-inferior-imagen{
+        max-width: 600px;
     }
 }
